# torn-rw-feed

./: .env.template  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml  ci-format.yml  ci-tests.yml  ci.yml
cert/: test_cert.crt  test_key.pem
scripts/: format_apply.sh  format_check.sh
src/: ApiErrorHandler.hpp  App.cpp  AppComponent.hpp  AppConfig.hpp  AuthHandler.hpp  DatabaseBackend.hpp  DatabaseComponent.hpp  SwaggerComponent.hpp  TornApiClient.hpp  TornApiComponent.hpp
src/clients/: ClientComponent.hpp  FFScouterApiClient.hpp  TornApiClient.hpp  TornStatsApiClient.hpp
src/controller/: AuthController.hpp  MyController.hpp  UserController.hpp  WarController.hpp
src/db/: ApiKeyDb.hpp  DbClient.hpp  FactionDb.hpp  MemberStatsDb.hpp  PurchaseDb.hpp  TargetsDb.hpp  UserDb.hpp  WarDb.hpp  WarFactionStatsFetchesDb.hpp  WarMemberInformationDb.hpp
src/db/sql/api_keys/: init.sql
src/db/sql/factions/: init.sql  name_not_unique.sql
src/db/sql/member_stats/: init.sql
src/db/sql/purchases/: init.sql
src/db/sql/targets/: init.sql
src/db/sql/users/: init.sql
src/db/sql/war_faction_stats_fetches/: init.sql
src/db/sql/war_member_information/: init.sql
src/db/sql/wars/: init.sql
src/dto/: ApiKeyDto.hpp  DTOs.hpp  Enums.hpp  FactionDto.hpp  FactionMemberInfoDto.hpp  MemberStatsDto.hpp  PurchaseDto.hpp  TargetsDto.hpp  UserDTO.hpp  UserDto.hpp  WarDto.hpp  WarFactionStatsFetchesDto.hpp  WarMemberInformationDto.hpp
src/dto/clients/: FFScouterResponseDto.hpp  TornErrorResponseDto.hpp  TornFactionMembersResponseDto.hpp  TornFactionResponseDto.hpp  TornFactionWarAndMembersResponseDto.hpp  TornFactionWarResponseDto.hpp  TornKeyResponseDto.hpp  TornStatsSpieResponseDto.hpp  TornUserBasicResponseDto.hpp
src/dto/responses/: ApiKeyIssueResponseDto.hpp  SpyResponseDto.hpp  WarStateResponseDto.hpp
src/dto/torn_client/: TornErrorResponseDto.hpp  TornFactionBasicDto.hpp  TornFactionMembersResponseDto.hpp  TornFactionRankDto.hpp  TornFactionResponseDto.hpp  TornFactionWarResponseDto.hpp  TornUserBasicResponseDto.hpp  TornUserProfileDto.hpp  TornUserStatusDto.hpp
src/service/: ApiKeyService.cpp  ApiKeyService.hpp  CrudService.hpp  FFScouterApiService.cpp  FFScouterApiService.hpp  FactionService.hpp  MemberStatsService.cpp  MemberStatsService.hpp  PurchaseService.hpp  TargetService.cpp  TargetService.hpp  TornApiService.cpp  TornApiService.hpp  TornApiServiceKeyManaged.cpp  TornApiServiceKeyManaged.hpp  TornStatsApiService.cpp  TornStatsApiService.hpp  UserService.cpp  UserService.hpp  WarFactionStatsFetchesService.cpp  WarFactionStatsFetchesService.hpp  WarMemberInformationService.hpp  WarService.cpp  WarService.hpp
src/util/: Crypto.hpp  DtoUtils.hpp  String.hpp
src/war/: Fetcher.hpp  Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp
test/: AssertionHelper.hpp  AuthControllerTest.cpp  AuthControllerTest.hpp  LocationParserTest.cpp  LocationParserTest.hpp  MyControllerTest.cpp  TestHelper.hpp  TestingFixtures.hpp  UserControllerTest.cpp  UserControllerTest.hpp  WarSocketTest.cpp  WarSocketTest.hpp  tests.cpp
test/MockTorn/: FixtureLoader.hpp  MockController.hpp  MockResponseLoader.hpp  TornController.hpp
test/MockTorn/fixtures/: torn_user_basic_ok.json
test/MockTorn/mock_responses/: ffscouter_scout_ok.json  torn_error_incorrect_api_key.json  torn_error_too_many_requests.json  torn_faction_basic_ok.json  torn_faction_members_offline_ok.json  torn_faction_members_one_online_ok.json  torn_faction_war_and_members_no_war_member_changed_ok.json  torn_faction_war_and_members_no_war_ok.json  torn_faction_war_and_members_response_changed_ok.json  torn_faction_war_and_members_response_ok.json  torn_faction_war_changed_score_ok.json  torn_faction_war_no_war_ok.json  torn_faction_war_ok.json  torn_key_response_custom_key_ok.json  torn_key_response_ok.json  tornstats_spy_ok.json
test/app/: MyApiTestClient.hpp  TestComponent.hpp  WSListener.cpp  WSListener.hpp
